# xctools

atapi_pt_helper/: .gitignore
atapi_pt_helper/src/: atapi_pt_helper.c
audio_helper/: configure.ac
audio_helper/src/: Makefile.am  main.c  openxtalsa.c  openxtalsa.h  openxtargo.c  openxtmixerctl.c  openxtmixerctl.h  openxtvmaudio.c  unittest.c
carrier-detect/: .gitignore  Makefile.am  configure.ac
compleat/: Setup.hs
qmp_helper/: .gitignore
qmp_helper/src/: qmp_helper.c
xcpmd/: .gitignore  AUTHORS  configure.ac
xcpmd/src/: Makefile.am  acpi-events.c  acpi-module.c  default-inputs-module.c  displayhandler-module.c  idle-detect-module.c  idle-detect-module.h  modules.c  platform.c  project.h  prototypes.h  rules.c  rules.h  utils.c  vm-events-module.c  xcpmd.h
